Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -110,11 +110,11 @@ Read more details in the [blog.](https://www.ibm.com/quantum/blog/iqp-upgrade)
 Starting 2 June 2025 and continuing through the year, IBM Quantum will begin a gradual rollout of new features to [dynamic circuits](/guides/classical-feedforward-and-control-flow) that will enable them at the utility scale.
 Improvements include the following:
 
-- Using the Gen3 engine stack that gives a 75x speedup in execution
-- Executing branches in parallel to reduce circuit duration and improves result quality
-- Improving mid circuit measurements
-- Improving integration with dynamical decoupling
-- Improving circuit timing information visibility
+- A 75x speedup in execution by using the [Gen3 engine stack](/guides/runtime-options-overview#experimental-option-note)
+- Parallel execution of branches, which reduces circuit duration and improves result quality
+- Improvement in mid-circuit measurement
+- Better integration with dynamical decoupling
+- More visibility of circuit timing information
 
 To accelerate the rollout, the following capabilities are now deprecated and will be no longer supported on or around 2 June 2025:
 
