changed EfficientSU2 to efficient_su2

--- a/docs/guides/simulate-with-qiskit-aer.ipynb
+++ b/docs/guides/simulate-with-qiskit-aer.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "df70b5fd-971d-4e7d-a23a-8df037c0fa47",
    "metadata": {},
    "outputs": [
@@ -66,10 +66,10 @@
     }
    ],
    "source": [
-    "from qiskit.circuit.library import EfficientSU2\n",
+    "from qiskit.circuit.library import efficient_su2\n",
     "\n",
     "n_qubits = 8\n",
-    "circuit = EfficientSU2(n_qubits)\n",
+    "circuit = efficient_su2(n_qubits)\n",
     "circuit.decompose().draw(\"mpl\")"
    ]
   },
@@ -180,7 +180,7 @@
     "\n",
     "where $n$ is the number of qubits, in this case, 2. That is, with probability $p$, the state is replaced with the completely mixed state, and the state is preserved with probability $1 - p$. After $m$ applications of the depolarizing channel, the probability of the state being preserved would be $(1 - p)^m$. Therefore, we expect the probability of retaining the correct state at the end of the simulation to go down exponentially with the number of CX gates in our circuit.\n",
     "\n",
-    "Let's count the number of CX gates in our circuit and compute $(1 - p)^m$. Because our circuit uses the EfficientSU2 class, we'll need to call `decompose` once to decompose it into CX gates. We call `count_ops` to get a dictionary that maps gate names to counts, and retrieve the entry for the CX gate."
+    "Let's count the number of CX gates in our circuit and compute $(1 - p)^m$. Because our circuit uses the efficient_su2 class, we'll need to call `decompose` once to decompose it into CX gates. We call `count_ops` to get a dictionary that maps gate names to counts, and retrieve the entry for the CX gate."
    ]
   },
   {
