--- a/docs/guides/simulate-stabilizer-circuits.ipynb
+++ b/docs/guides/simulate-stabilizer-circuits.ipynb
@@ -73,10 +73,10 @@
     }
    ],
    "source": [
-    "from qiskit.circuit.library import EfficientSU2\n",
+    "from qiskit.circuit.library import efficient_su2\n",
     "\n",
     "n_qubits = 8\n",
-    "circuit = EfficientSU2(n_qubits)\n",
+    "circuit = efficient_su2(n_qubits)\n",
     "circuit.decompose().draw(\"mpl\")"
    ]
   },
