--- a/docs/guides/get-started-with-primitives.ipynb
+++ b/docs/guides/get-started-with-primitives.ipynb
@@ -292,7 +292,7 @@
     "import numpy as np\n",
     "from qiskit.circuit.library import efficient_su2\n",
     "\n",
-    "circuit = efficient_su2(127, entanglement=\"linear\", flatten=True)\n",
+    "circuit = efficient_su2(127, entanglement=\"linear\")\n",
     "circuit.measure_all()\n",
     "# The circuit is parametrized, so we will define the parameter values for execution\n",
     "param_values = np.random.rand(circuit.num_parameters)"
