--- a/docs/guides/represent-quantum-computers.ipynb
+++ b/docs/guides/represent-quantum-computers.ipynb
@@ -80,13 +80,12 @@
    "id": "4064b5ad-8a3a-462b-ae30-29576230c084",
    "metadata": {},
    "source": [
-    "The example circuit uses an instance of [`efficient_su2`](/api/qiskit/qiskit.circuit.library.EfficientSU2#efficientsu2) from Qiskit's circuit library.\n",
-    "The following cell decomposes the circuit before drawing it to show its gate structure."
+    "The example circuit uses an instance of [`efficient_su2`](/api/qiskit/qiskit.circuit.library.EfficientSU2#efficientsu2) from Qiskit's circuit library."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "97f9acc1-ac53-4025-b413-485777932a9b",
    "metadata": {},
    "outputs": [
@@ -109,7 +108,7 @@
     "\n",
     "qc = efficient_su2(12, entanglement=\"circular\", reps=1)\n",
     "\n",
-    "qc.decompose().draw(\"mpl\")"
+    "qc.draw(\"mpl\")"
    ]
   },
   {
