--- a/docs/guides/dynamic-circuits-considerations.ipynb
+++ b/docs/guides/dynamic-circuits-considerations.ipynb
@@ -56,7 +56,19 @@
     "- **Resets**.\n",
     "  - Central controller: Memory usage scales proportionally with the number of resets.\n",
     "- **Measurements**.\n",
-    "  - Central controller: Memory usage scales proportionally with the number of measurements used by the central controller for control flow."
+    "  - Central controller: Memory usage scales proportionally with the number of measurements used by the central controller for control flow. \n",
+    "  \n",
+    "<Admonition type=\"note\" title=\"Buffer overflow error\">\n",
+    "\n",
+    "One of the most common limitations users can encounter when executing dynamic circuits is a buffer overflow during measurement result collection. The measurement buffer on the control system can only store a limited number of measurement results. If the circuit performs many measurements in rapid succession, the buffer might fill before the control system has time to stream the results to the host, causing a job failure. \n",
+    "\n",
+    "If you encounter the error `\"RuntimeJobFailureError: unable to retrieve job result. A buffer overflow occurred during result collection...\"`, try these strategies to mitigate this issue:\n",
+    "- **Increase `rep_delay` (delay between shots):** This adds time between shots, giving the control system more time to offload measurement results to the host and clear the buffer. This is the most direct fix and does not impact shot quality, though it will increase total job execution time.\n",
+    "- **Insert `qc.delay()` after measurements:** Add a delay instruction between measurements within a circuit to give the system time to stream results and prevent the buffer from filling.  \n",
+    "**Note:** this approach increases the circuit duration, which might reduce shot quality due to qubit decoherence.\n",
+    "\n",
+    "For more information, see the [Fixed and dynamic repetition rate execution](/guides/repetition-rate-execution) guide, which explains dynamic repetition rate execution and how to set `rep_delay`.\n",
+    "</Admonition>"
    ]
   }
  ],
