--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -417,7 +417,9 @@
     "\n",
     "When a Sampler job is completed successfully, the returned [`PrimitiveResult`](../api/qiskit/qiskit.primitives.PrimitiveResult) object contains a list of [`SamplerPubResult`](../api/qiskit/qiskit.primitives.SamplerPubResult)s, one per PUB. The databins of these `SamplerPubResult`s are dict-like objects that contain one `BitArray`s per `ClassicalRegister` in the circuit.\n",
     "\n",
-    "The `get_counts` method of `BitArray` returns a dictionary mapping the sampled measurement outcomes to their counts. For example, for a circuit with measurement instructions added by the [`QuantumCircuit.measure_all()`](../api/qiskit/qiskit.circuit.QuantumCircuit#measure_all), the counts can be access as follows:"
+    "The `BitArray` class is a container for ordered shot data. In more detail, it stores the information sampled bitstrings as bytes inside a two-dimensional array. The left-most axis of this array runs over ordered shots, while the right-most axis runs over bytes.\n",
+    "\n",
+    "As a first example, let us look at the following ten-qubit circuit:"
    ]
   },
   {
@@ -445,15 +447,31 @@
     "\n",
     "# the databin contains one BitArray\n",
     "data = result[0].data\n",
-    "print(f\"Databin: {data}\")\n",
+    "print(f\"Databin: {data}\\n\")\n",
     "\n",
     "# to access the BitArray, one can use the key \"meas\", which is the default\n",
     "# name of the classical register when this is added by the `measure_all` method\n",
     "array = data.meas\n",
-    "print(f\"BitArray: {array}\")\n",
-    "\n",
+    "print(f\"BitArray: {array}\\n\")\n",
+    "print(f\"The shape of register `meas` is {data.meas.array.shape}.\\n\")\n",
+    "print(f\"The bytes in register `alpha`, shot by shot:\\n{data.meas.array}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As can be seen, ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# optionally, convert away from the native BitArray format to a dictionary format\n",
-    "counts = array.get_counts()\n",
+    "counts = data.meas.get_counts()\n",
     "print(f\"Counts: {counts}\")"
    ]
   },
@@ -507,9 +525,7 @@
    "source": [
     "#### Leveraging `BitArray`s for performant post-processing\n",
     "\n",
-    "Dictionaries of counts allow for a quick and convenient lookup of results. However, `BitArray`s store the sampled bitstrings in `Numpy` arrays, not in dictionaries. Since arrays generally offer better performance compared to dictionaries, it is advisable to perform any post-processing directly on the `BitArray`s rather than on the counts.\n",
-    "\n",
-    "Every `BitArray` owns a two-dimensional array that stores the bitstrings as bytes (more precisely, as `numpy.uint8`s whose bits are the bitstrings that appear in the dictionary of counts). The left-most axis of said array runs over ordered shots, while the right-most axis runs over bytes (whose bits are the bitstrings that appear in the dictionary of counts). The following cell shows how to retrieve the array of bytes for the results obtained in the previous example, as well how to manipulate them as `Numpy` arrays:"
+    "Since arrays generally offer better performance compared to dictionaries, it is advisable to perform any post-processing directly on the `BitArray`s rather than on dictionaries of counts. The `BitArray` class offers a range of methods to perform some common post-processing operations:"
    ]
   },
   {
@@ -529,24 +545,8 @@
     "mask = data.alpha.array == \"0b1\"\n",
     "ps_beta = data.beta[mask[:, 0]]\n",
     "print(f\"The shape of `beta` after post-selection is {ps_beta.array.shape}.\")\n",
-    "print(f\"The bytes in `beta` after post-selection:\\n{ps_beta.array}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "998bfcca-835e-42f9-9919-6474058e8970",
-   "metadata": {},
-   "source": [
-    "The `BitArray` class offers a range of methods to perform some common post-processing operations:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f51c14f-434a-4c7e-8fc7-6acbcde68959",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(f\"The bytes in `beta` after post-selection:\\n{ps_beta.array}\")\n",
+    "\n",
     "# get a slice of `beta` to retrieve the first three bits\n",
     "beta_sl_bits = data.beta.slice_bits([0, 1, 2])\n",
     "print(\n",
