minor copyediting tweaks

--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -417,7 +417,7 @@
     "\n",
     "When a Sampler job is completed successfully, the returned [`PrimitiveResult`](../api/qiskit/qiskit.primitives.PrimitiveResult) object contains a list of [`SamplerPubResult`](../api/qiskit/qiskit.primitives.SamplerPubResult)s, one per PUB. The databins of these `SamplerPubResult`s are dict-like objects that contain one `BitArray`s per `ClassicalRegister` in the circuit.\n",
     "\n",
-    "The `get_counts` method of `BitArray` returns a dictionary mapping the sampled measurement outcomes to their counts. For example, for a circuit with measurement instructions added by the [`QuantumCircuit.measure_all()`](../api/qiskit/qiskit.circuit.QuantumCircuit#measure_all), the counts can be access as follows:"
+    "The `get_counts` method of `BitArray` returns a dictionary mapping the sampled measurement outcomes to their counts. For example, for a circuit with measurement instructions added by [`QuantumCircuit.measure_all()`](../api/qiskit/qiskit.circuit.QuantumCircuit#measure_all), the counts can be accessed as follows:"
    ]
   },
   {
@@ -447,7 +447,7 @@
     "data = result[0].data\n",
     "print(f\"Databin: {data}\")\n",
     "\n",
-    "# to access the BitArray, one can use the keyword \"meas\", which is the default\n",
+    "# to access the BitArray, use the keyword \"meas\", which is the default\n",
     "# name of the classical register when this is added by the `measure_all` method\n",
     "array = data.meas\n",
     "print(f\"BitArray: {array}\")\n",
@@ -462,7 +462,7 @@
    "id": "61c70ff7-7814-4535-9268-ac163c10121c",
    "metadata": {},
    "source": [
-    "When a circuit contains more than one classical registers, the results are stored in different `BitArray`s. The following example modifies the previous snippet by splitting the classical register into two distinct registers:"
+    "When a circuit contains more than one classical register, the results are stored in different `BitArray`s. The following example modifies the previous snippet by splitting the classical register into two distinct registers:"
    ]
   },
   {
@@ -512,7 +512,7 @@
     "\n",
     "Dictionaries of counts allow for a quick and convenient lookup of results. However, `BitArray`s store the sampled bitstrings in `Numpy` arrays, not in dictionaries. Since arrays generally offer better performance compared to dictionaries, it is advisable to perform any post-processing directly on the `BitArray`s rather than on the counts.\n",
     "\n",
-    "Every `BitArray` owns a two-dimensional array that stores the bitstrings as bytes (more precisely, as `numpy.uint8`s whose bits are the bitstrings that appear in the dictionary of counts). The left-most axis of said array runs over ordered shots, while the right-most axis runs over bytes (whose bits are the bitstrings that appear in the dictionary of counts). The following cell shows how to retrieve the array of bytes for the results obtained in the previous example, as well how to manipulate them as `Numpy` arrays:"
+    "Every `BitArray` owns a two-dimensional array that stores the bitstrings as bytes (more precisely, as `numpy.uint8`s whose bits are the bitstrings that appear in the dictionary of counts). The left-most axis of said array runs over ordered shots, while the right-most axis runs over bytes (whose bits are the bitstrings that appear in the dictionary of counts). The following cell shows how to retrieve the array of bytes for the results obtained in the previous example, as well as how to manipulate them as `Numpy` arrays:"
    ]
   },
   {
