--- a/docs/guides/circuit-library.ipynb
+++ b/docs/guides/circuit-library.ipynb
@@ -113,7 +113,7 @@
     "\n",
     "This family of circuits is popular in variational quantum algorithms because they can produce a wide range of quantum states. Variational algorithms adjust the gate parameters to find states that have certain properties (such as states that represent a good solution to an optimization problem). For this purpose, many circuits in the library are **parameterized**, which means you can define them without fixed values.\n",
     "\n",
-    "The following code cell imports a `TwoLocal` circuit, in which the entangling gates are two-qubit gates. This circuit interleaves blocks of parameterized single-qubit gates, followed by entangling blocks of two-qubit gates. The following code creates a three-qubit circuit, with single-qubit RX-gates and two-qubit CZ-gates."
+    "The following code cell imports a `n_local` circuit, in which the entangling gates are two-qubit gates. This circuit interleaves blocks of parameterized single-qubit gates, followed by entangling blocks of two-qubit gates. The following code creates a three-qubit circuit, with single-qubit RX-gates and two-qubit CZ-gates."
    ]
   },
   {
@@ -137,10 +137,10 @@
     }
    ],
    "source": [
-    "from qiskit.circuit.library import TwoLocal\n",
+    "from qiskit.circuit.library import n_local\n",
     "\n",
-    "two_local = TwoLocal(3, \"rx\", \"cz\")\n",
-    "two_local.decompose().draw(\"mpl\")"
+    "two_local = n_local(3, \"rx\", \"cz\")\n",
+    "two_local.draw(\"mpl\")"
    ]
   },
   {
@@ -227,7 +227,7 @@
     " - Basis encoding, which encodes an integer $k$ by preparing the corresponding basis state $|k\\rangle$.\n",
     " - Angle encoding, which sets each number in the data as a rotation angle in a parameterized circuit.\n",
     "\n",
-    "The best approach depends upon the specifics of your application. On current quantum computers, however, we often use angle-encoding circuits such as the `ZZFeatureMap`."
+    "The best approach depends upon the specifics of your application. On current quantum computers, however, we often use angle-encoding circuits such as the `zz_feature_map`."
    ]
   },
   {
@@ -251,10 +251,10 @@
     }
    ],
    "source": [
-    "from qiskit.circuit.library import ZZFeatureMap\n",
+    "from qiskit.circuit.library import zz_feature_map\n",
     "\n",
     "features = [0.2, 0.4, 0.8]\n",
-    "feature_map = ZZFeatureMap(feature_dimension=len(features))\n",
+    "feature_map = zz_feature_map(feature_dimension=len(features))\n",
     "\n",
     "encoded = feature_map.assign_parameters(features)\n",
     "encoded.draw(\"mpl\")"
@@ -340,6 +340,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "908e4b4a-5edf-4390-82a0-e755050c2a37",
+   "metadata": {},
+   "source": [
+    "The circuit library also includes circuits believed to be hard to simulate classically, such as instantaneous quantum polynomial (iqp) circuits. These circuits sandwich certain diagonal gates (in the computational basis) between blocks of Hadamard gates.\n",
+    "\n",
+    "Other circuits include `grover_operator` for use in Grover's algorithm, and the `fourier_checking` circuit for the Fourier checking problem. See these circuits in [Particular quantum circuits](/api/qiskit/circuit_library#particular-quantum-circuits) in the circuit library API documentation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "9629a507-8191-409e-b895-fd0833c8fcd7",
@@ -360,20 +371,9 @@
     }
    ],
    "source": [
-    "from qiskit.circuit.library import QuantumVolume\n",
+    "from qiskit.circuit.library import quantum_volume\n",
     "\n",
     "QuantumVolume(4).decompose().draw(\"mpl\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "908e4b4a-5edf-4390-82a0-e755050c2a37",
-   "metadata": {},
-   "source": [
-    "The circuit library also includes circuits believed to be hard to simulate classically, such as instantaneous quantum polynomial (IQP) circuits. These circuits sandwich certain diagonal gates (in the computational basis) between blocks of Hadamard gates.\n",
-    "\n",
-    "Other circuits include `GroverOperator` for use in Grover's algorithm, and the `FourierChecking` circuit for the Fourier checking problem. See these circuits in [Particular quantum circuits](/api/qiskit/circuit_library#particular-quantum-circuits) in the circuit library API documentation."
    ]
   },
   {
@@ -409,10 +409,10 @@
     }
    ],
    "source": [
-    "from qiskit.circuit.library import CDKMRippleCarryAdder\n",
+    "from qiskit.circuit.library import FullAdderGate\n",
     "from qiskit import QuantumCircuit, QuantumRegister, ClassicalRegister\n",
     "\n",
-    "adder = CDKMRippleCarryAdder(3)  # Adder of 3-bit numbers\n",
+    "adder = FullAdderGate(3)  # Adder of 3-bit numbers\n",
     "\n",
     "# Create the number A=2\n",
     "reg_a = QuantumRegister(3, \"a\")\n",
@@ -426,8 +426,9 @@
     "\n",
     "# Create a circuit to hold everything, including a classical register for\n",
     "# the result\n",
+    "qregs = [QuantumRegister(1, 'cin'), QuantumRegister(3, 'a'), QuantumRegister(3, 'b'), QuantumRegister(1, 'cout')]\n",
     "reg_result = ClassicalRegister(3)\n",
-    "circuit = QuantumCircuit(*adder.qregs, reg_result)\n",
+    "circuit = QuantumCircuit(*qregs, reg_result)\n",
     "\n",
     "# Compose number initializers with the adder. Adder stores the result to\n",
     "# register B, so we'll measure those qubits.\n",
@@ -497,7 +498,7 @@
  "metadata": {
   "description": "Read more about out-of-the-box circuits provided by the Qiskit circuit library, including N-local, time-evolution and data-encoding circuits",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -511,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.9.21"
   },
   "title": "Circuit library"
  },
