--- a/docs/guides/circuit-library.ipynb
+++ b/docs/guides/circuit-library.ipynb
@@ -385,7 +385,7 @@
     "\n",
     "Arithmetic operations are classical functions, such as adding integers and bit-wise operations. These may be useful with algorithms such as amplitude estimation for finance applications, and in algorithms like the HHL algorithm, which solves linear systems of equations.\n",
     "\n",
-    "As an example, let’s try adding two three-bit numbers using a \"ripple-carry\" circuit to perform in-place addition (`CDKMRippleCarryAdder`). This adder adds two numbers (we'll call them \"A\" and \"B\") and writes the result to the register that held B. In the following example, A=2 and B=3."
+    "As an example, let’s try adding two three-bit numbers using a \"ripple-carry\" circuit to perform in-place addition (`FullAdderGate`). This adder adds two numbers (we'll call them \"A\" and \"B\") and writes the result to the register that held B. In the following example, A=2 and B=3."
    ]
   },
   {
