--- a/docs/guides/circuit-library.ipynb
+++ b/docs/guides/circuit-library.ipynb
@@ -362,7 +362,7 @@
    "source": [
     "from qiskit.circuit.library import quantum_volume\n",
     "\n",
-    "QuantumVolume(4).decompose().draw(\"mpl\")"
+    "quantum_volume(4).draw(\"mpl\")"
    ]
   },
   {
