--- a/docs/guides/circuit-library.ipynb
+++ b/docs/guides/circuit-library.ipynb
@@ -426,7 +426,12 @@
     "\n",
     "# Create a circuit to hold everything, including a classical register for\n",
     "# the result\n",
-    "qregs = [QuantumRegister(1, 'cin'), QuantumRegister(3, 'a'), QuantumRegister(3, 'b'), QuantumRegister(1, 'cout')]\n",
+    "qregs = [\n",
+    "    QuantumRegister(1, \"cin\"),\n",
+    "    QuantumRegister(3, \"a\"),\n",
+    "    QuantumRegister(3, \"b\"),\n",
+    "    QuantumRegister(1, \"cout\"),\n",
+    "]\n",
     "reg_result = ClassicalRegister(3)\n",
     "circuit = QuantumCircuit(*qregs, reg_result)\n",
     "\n",
