--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "95a715d2",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2fb4efc4",
    "metadata": {
     "tags": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d56e1440",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,9 @@
     "    },\n",
     "    instance=instance,\n",
     "    backend_name=backend_name,  # E.g. \"ibm_brisbane\"\n",
-    ")"
+    ")\n",
+    "\n",
+    "time_estimate_result = job.result()"
    ]
   },
   {
@@ -186,12 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e7351d6b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "job = qesem_function.run(\n",
+    "sample_job = qesem_function.run(\n",
     "    pubs=[(circ, [avg_magnetization, other_observable])],\n",
     "    instance=instance,\n",
     "    backend_name=backend_name,  # E.g. \"ibm_brisbane\"\n",
@@ -211,10 +213,18 @@
    "execution_count": null,
    "id": "856fe992",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QUEUED\n"
+     ]
+    }
+   ],
    "source": [
-    "print(job.status())\n",
-    "result = job.result()"
+    "print(sample_job.status())\n",
+    "result = sample_job.result()"
    ]
   },
   {
@@ -306,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "48821756",
    "metadata": {},
    "outputs": [
@@ -315,12 +325,12 @@
      "output_type": "stream",
      "text": [
       "The estimated QPU time for this PUB is: \n",
-      "{'time_estimation_sec': 3600}\n"
+      "{'time_estimation_sec': 504000}\n"
      ]
     }
    ],
    "source": [
-    "print(f\"The estimated QPU time for this PUB is: \\n{result[0].metadata}\")"
+    "print(f\"The estimated QPU time for this PUB is: \\n{time_estimate_result[0].metadata}\")"
    ]
   },
   {
@@ -336,32 +346,7 @@
    "execution_count": null,
    "id": "fda5f739",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The result of the submitted job had 1 PUB\n",
-      "The expectation values measured from this PUB are: \n",
-      "[0.98, 1.01]\n",
-      "The error-bar values are: \n",
-      "[0.028, 0.015]\n",
-      "And the associated metadata contains the original observables, making the results easier to interpret: \n",
-      "{\n",
-      "    'observables': [\n",
-      "        SparsePauliOp(\n",
-      "            ['IIIIZ', 'IIIZI', 'IIZII', 'IZIII', 'ZIIII'],\n",
-      "            coeffs=[0.2 + 0.0j, 0.2 + 0.0j, 0.2 + 0.0j, 0.2 + 0.0j, 0.2 + 0.0j]\n",
-      "        ),\n",
-      "        SparsePauliOp(\n",
-      "            ['IIIZZ', 'ZIXII'],\n",
-      "            coeffs=[1.0 + 0.0j, 0.5 + 0.0j]\n",
-      "        )\n",
-      "    ]\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"The result of the submitted job had {len(result)} PUB\")\n",
     "print(\n",
@@ -388,7 +373,15 @@
    "execution_count": null,
    "id": "d95a3f30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PrimitiveResult([PubResult(data=DataBin(evs=np.ndarray(<shape=(2,), dtype=float64>), stds=np.ndarray(<shape=(2,), dtype=float64>), shape=(2,)), metadata={'gate_fidelities': {'CNOT': 0.12649096598962462, 'ID1Q': 0.3271316829467972}, 'total_shots': 445200, 'mitigation_shots': 180000, 'transpiled_circs': [{'circuit': 'OPENQASM 3.0;\\ninclude \"stdgates.inc\";\\nbit[119] c0;\\nqubit[119] q1;\\ncx q1[99], q1[100];\\ncx q1[110], q1[118];\\nbarrier q1[99], q1[100], q1[110], q1[118];\\nbarrier q1[99], q1[100], q1[110], q1[117], q1[118];\\ncx q1[100], q1[110];\\ncx q1[118], q1[117];\\nbarrier q1[100], q1[110], q1[118], q1[117];\\nbarrier q1[99], q1[100], q1[110], q1[117], q1[118];\\nbarrier q1[99], q1[100], q1[110], q1[117], q1[118];\\nc0[99] = measure q1[99];\\nc0[100] = measure q1[100];\\nc0[110] = measure q1[110];\\nc0[117] = measure q1[117];\\nc0[118] = measure q1[118];\\n', 'qubit_map': [[0, 99], [1, 100], [2, 110], [3, 118], [4, 117]], 'num_measurement_bases': 2}], 'noisy_results': DataBin(evs=np.ndarray(<shape=(2,), dtype=float64>), stds=np.ndarray(<shape=(2,), dtype=float64>), shape=(2,))})], metadata={})\n"
+     ]
+    }
+   ],
    "source": [
     "print(job.result())"
    ]
@@ -434,7 +427,7 @@
  "metadata": {
   "description": "Run quantum circuits on noisy QPUs to obtain highly accurate error-free results with highly efficient QPU-time overheads, close to fundamental bounds.",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "qiskit-docs-test-2.0",
    "language": "python",
    "name": "python3"
   },
@@ -448,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.8"
   },
   "title": "QESEM - A Qiskit Function by Qedma"
  },
