fineshed up narrative

--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -461,7 +461,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As can be seen, ..."
+    "It can sometimes be convenient to convert away from the bytes format in the `BitArray` to bitstrings. The `get_count` method returns a dictionary mapping bitstrings to the number of times that they occurred."
    ]
   },
   {
