--- a/docs/guides/defaults-and-configuration-options.ipynb
+++ b/docs/guides/defaults-and-configuration-options.ipynb
@@ -68,14 +68,14 @@
    ],
    "source": [
     "from qiskit import QuantumCircuit\n",
-    "from qiskit.circuit.library import GroverOperator, Diagonal\n",
+    "from qiskit.circuit.library import grover_operator, DiagonalGate\n",
     "from qiskit_ibm_runtime.fake_provider import FakeSherbrooke\n",
     "\n",
     "# Create circuit to test transpiler on\n",
-    "oracle = Diagonal([1] * 7 + [-1])\n",
+    "oracle = DiagonalGate([1] * 7 + [-1])\n",
     "qc = QuantumCircuit(3)\n",
     "qc.h([0, 1, 2])\n",
-    "qc = qc.compose(GroverOperator(oracle))\n",
+    "qc = qc.compose(grover_operator(oracle))\n",
     "\n",
     "# Add measurements to the circuit\n",
     "qc.measure_all()\n",
@@ -312,7 +312,7 @@
  "metadata": {
   "description": "The default settings and configuration options for quantum circuit transpilation in the Qiskit SDK.",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -326,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.9.21"
   },
   "title": "Transpilation defaults and configuration options"
  },
