--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -449,8 +449,8 @@
     "data = result[0].data\n",
     "print(f\"Databin: {data}\\n\")\n",
     "\n",
-    "# to access the BitArray, one can use the key \"meas\", which is the default\n",
-    "# name of the classical register when this is added by the `measure_all` method\n",
+    "# to access the BitArray, use the key \"meas\", which is the default name of\n",
+    "# the classical register when this is added by the `measure_all` method\n",
     "array = data.meas\n",
     "print(f\"BitArray: {array}\\n\")\n",
     "print(f\"The shape of register `meas` is {data.meas.array.shape}.\\n\")\n",
