--- a/docs/guides/local-testing-mode.ipynb
+++ b/docs/guides/local-testing-mode.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8eb549ef-ba9c-486e-8b62-e90af6830102",
    "metadata": {},
    "source": [
     "<span id=\"test-locally\"></span>\n",
@@ -11,7 +10,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a2510a7-1f0a-40d4-914b-68bffff7a27a",
    "metadata": {
     "tags": [
      "version-info"
@@ -34,7 +32,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0d59170-4f83-4396-9f35-ad78300d6b89",
    "metadata": {},
    "source": [
     "Local testing mode (available with `qiskit-ibm-runtime` 0.22.0 or later) can be used to help develop and test programs before fine-tuning them and sending them to real quantum hardware.  After using local testing mode to verify your program, all you need to change is the backend name to run it on a QPU.\n",
@@ -55,7 +52,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f03f205c-996f-461c-ac3f-9629689d3cc0",
    "metadata": {},
    "source": [
     "## Fake backends example"
@@ -64,7 +60,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1f3a8ee3-d4a5-4237-a56b-6b50ea061739",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +88,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6483a298-211a-4a31-bea2-21670ff408db",
    "metadata": {},
    "source": [
     "## AerSimulator examples\n",
@@ -104,7 +98,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c5edb89a-65e6-40fa-a541-bbdcf6cc7043",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +124,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e371b2b0-0f9f-4357-bdbd-7de4a5d77304",
    "metadata": {},
    "source": [
     "To simulate with noise, specify a QPU (quantum hardware) and submit it to Aer.  Aer builds a noise model based on the calibration data from that QPU, and instantiates an Aer backend with that model.  If you prefer, you can [build a noise model](./build-noise-models).\n",
@@ -142,7 +134,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5cba81b8-058e-4626-a72b-fad91a00410c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +163,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3647532a-9a58-4931-965d-13794416f9a8",
    "metadata": {},
    "source": [
     "<span id=\"clifford-sim\"></span>\n",
@@ -186,16 +176,15 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "061dfd9b-766d-4aaf-a3a3-ce6b1c1e7eca",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from qiskit.circuit.library import EfficientSU2\n",
+    "from qiskit.circuit.library import efficient_su2\n",
     "from qiskit_ibm_runtime import SamplerV2 as Sampler\n",
     "\n",
     "n_qubits = 500  # <---- note this uses 500 qubits!\n",
-    "circuit = EfficientSU2(n_qubits)\n",
+    "circuit = efficient_su2(n_qubits)\n",
     "circuit.measure_all()\n",
     "\n",
     "rng = np.random.default_rng(1234)\n",
@@ -215,7 +204,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40fe0cb0-74bf-4bf4-afec-a66c7b166b0c",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -233,7 +221,7 @@
  "metadata": {
   "description": "Use local testing mode to simulate quantum hardware in Qiskit Runtime",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -247,10 +235,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.9.21"
   },
   "title": "Qiskit Runtime local testing mode"
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
