--- a/docs/guides/primitives-examples.ipynb
+++ b/docs/guides/primitives-examples.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "915d2c66-aed3-47f1-a405-144348514dd3",
    "metadata": {},
    "source": [
     "# Primitives examples\n",
@@ -36,7 +35,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "88d9d34b-2903-48b9-8f3c-398da05b487b",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +48,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "from qiskit.circuit.library import IQP\n",
+    "from qiskit.circuit.library import iqp\n",
     "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit.quantum_info import SparsePauliOp, random_hermitian\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator\n",
@@ -63,7 +61,7 @@
     ")\n",
     "\n",
     "mat = np.real(random_hermitian(n_qubits, seed=1234))\n",
-    "circuit = IQP(mat)\n",
+    "circuit = iqp(mat)\n",
     "observable = SparsePauliOp(\"Z\" * 50)\n",
     "\n",
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
@@ -80,7 +78,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "191eb3ee-b0d7-4710-90d6-1839ab51719e",
    "metadata": {},
    "source": [
     "### Run multiple experiments in a single job\n",
@@ -91,7 +88,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6bd60dea-dde5-48a6-9b35-7d90a48692a1",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +105,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "from qiskit.circuit.library import IQP\n",
+    "from qiskit.circuit.library import iqp\n",
     "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit.quantum_info import SparsePauliOp, random_hermitian\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator\n",
@@ -125,7 +121,7 @@
     "mats = [np.real(random_hermitian(n_qubits, seed=rng)) for _ in range(3)]\n",
     "\n",
     "pubs = []\n",
-    "circuits = [IQP(mat) for mat in mats]\n",
+    "circuits = [iqp(mat) for mat in mats]\n",
     "observables = [\n",
     "    SparsePauliOp(\"X\" * 50),\n",
     "    SparsePauliOp(\"Y\" * 50),\n",
@@ -152,7 +148,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36995a0d-a912-4a55-8ed5-20525d248237",
    "metadata": {},
    "source": [
     "### Run parameterized circuits\n",
@@ -163,7 +158,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c80000d6-b8fe-419c-9d4c-874190b9b8b7",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +262,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7978aa5-da67-4f93-927d-277802ae5437",
    "metadata": {},
    "source": [
     "### Use sessions and advanced options\n",
@@ -285,7 +278,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cbe2bed7-e5c1-4264-ac42-1c267ff1af3b",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +293,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "from qiskit.circuit.library import IQP\n",
+    "from qiskit.circuit.library import iqp\n",
     "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit.quantum_info import SparsePauliOp, random_hermitian\n",
     "from qiskit_ibm_runtime import (\n",
@@ -319,9 +311,9 @@
     "\n",
     "rng = np.random.default_rng(1234)\n",
     "mat = np.real(random_hermitian(n_qubits, seed=rng))\n",
-    "circuit = IQP(mat)\n",
+    "circuit = iqp(mat)\n",
     "mat = np.real(random_hermitian(n_qubits, seed=rng))\n",
-    "another_circuit = IQP(mat)\n",
+    "another_circuit = iqp(mat)\n",
     "observable = SparsePauliOp(\"X\" * 50)\n",
     "another_observable = SparsePauliOp(\"Y\" * 50)\n",
     "\n",
@@ -356,7 +348,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a60b53b-418a-44fe-92d2-b1ba5d967c84",
    "metadata": {},
    "source": [
     "<span id=\"sampler-examples\"></span>\n",
@@ -372,7 +363,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "012cfeea-3af3-46bb-9e64-15bb052bbcd2",
    "metadata": {
     "scrolled": true
    },
@@ -387,7 +377,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "from qiskit.circuit.library import IQP\n",
+    "from qiskit.circuit.library import iqp\n",
     "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit.quantum_info import random_hermitian\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler\n",
@@ -400,7 +390,7 @@
     ")\n",
     "\n",
     "mat = np.real(random_hermitian(n_qubits, seed=1234))\n",
-    "circuit = IQP(mat)\n",
+    "circuit = iqp(mat)\n",
     "circuit.measure_all()\n",
     "\n",
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
@@ -418,7 +408,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5c3d65c-9d14-4b4e-800c-6e3e231e335c",
    "metadata": {},
    "source": [
     "### Run multiple experiments in a single job\n",
@@ -429,7 +418,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b5372b7e-8bc2-4f2e-8f65-03dcd368faeb",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +432,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "from qiskit.circuit.library import IQP\n",
+    "from qiskit.circuit.library import iqp\n",
     "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit.quantum_info import random_hermitian\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler\n",
@@ -458,7 +446,7 @@
     "\n",
     "rng = np.random.default_rng()\n",
     "mats = [np.real(random_hermitian(n_qubits, seed=rng)) for _ in range(3)]\n",
-    "circuits = [IQP(mat) for mat in mats]\n",
+    "circuits = [iqp(mat) for mat in mats]\n",
     "for circuit in circuits:\n",
     "    circuit.measure_all()\n",
     "\n",
@@ -477,7 +465,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36337791-94ff-4ed5-aa26-808c470eb728",
    "metadata": {},
    "source": [
     "### Run parameterized circuits\n",
@@ -488,7 +475,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ea6c113e-15db-47a1-be34-459e68d1db4e",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +487,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "from qiskit.circuit.library import RealAmplitudes\n",
+    "from qiskit.circuit.library import real_amplitudes\n",
     "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler\n",
     "\n",
@@ -513,7 +499,7 @@
     ")\n",
     "\n",
     "# Step 1: Map classical inputs to a quantum problem\n",
-    "circuit = RealAmplitudes(num_qubits=n_qubits, reps=2)\n",
+    "circuit = real_amplitudes(num_qubits=n_qubits, reps=2)\n",
     "circuit.measure_all()\n",
     "\n",
     "# Define three sets of parameters for the circuit\n",
@@ -541,7 +527,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f144ac9-5f64-4aca-8cc4-8cf9362c5666",
    "metadata": {},
    "source": [
     "### Use sessions and advanced options\n",
@@ -558,7 +543,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d6248dcb-2ba9-4a06-a9ef-727db7092093",
    "metadata": {
     "scrolled": true
    },
@@ -573,7 +557,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "from qiskit.circuit.library import IQP\n",
+    "from qiskit.circuit.library import iqp\n",
     "from qiskit.quantum_info import random_hermitian\n",
     "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime import Session, SamplerV2 as Sampler\n",
@@ -588,10 +572,10 @@
     "\n",
     "rng = np.random.default_rng(1234)\n",
     "mat = np.real(random_hermitian(n_qubits, seed=rng))\n",
-    "circuit = IQP(mat)\n",
+    "circuit = iqp(mat)\n",
     "circuit.measure_all()\n",
     "mat = np.real(random_hermitian(n_qubits, seed=rng))\n",
-    "another_circuit = IQP(mat)\n",
+    "another_circuit = iqp(mat)\n",
     "another_circuit.measure_all()\n",
     "\n",
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
@@ -615,7 +599,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e81eb3e4-632a-49da-a926-6e79f8640867",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +619,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9484b7b7-e474-4291-b3ee-ace64f7cf126",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -655,7 +637,7 @@
  "metadata": {
   "description": "Practical examples of using primitives in Qiskit Runtime.",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -669,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.9.21"
   },
   "title": "Primitives examples"
  },
