--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -173,14 +173,14 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from qiskit.circuit.library import IQP\n",
+    "from qiskit.circuit.library import iqp\n",
     "from qiskit.quantum_info import random_hermitian, SparsePauliOp\n",
     "\n",
     "n_qubits = 50\n",
     "\n",
     "# Generate a random circuit\n",
     "mat = np.real(random_hermitian(n_qubits, seed=1234))\n",
-    "circuit = IQP(mat)\n",
+    "circuit = iqp(mat)\n",
     "circuit.measure_all()\n",
     "\n",
     "# Define observables as a string\n",
@@ -724,7 +724,7 @@
  "metadata": {
   "description": "Apply automated error suppression using Fire Opal Performance Management by Q-CTRL",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -738,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.9.21"
   },
   "title": "Performance Management - A Qiskit Function by Q-CTRL Fire Opal"
  },
