--- a/docs/guides/get-started-with-primitives.ipynb
+++ b/docs/guides/get-started-with-primitives.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ac2e4df5-d03e-442d-857b-a1ad8b2a5c85",
    "metadata": {},
    "source": [
     "# Get started with primitives\n",
@@ -34,6 +35,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0009caf4-5088-4bd2-b3b4-bd280d32500b",
    "metadata": {},
    "source": [
     "<span id=\"start-estimator\"></span>\n",
@@ -51,6 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "566136c4-c605-43dc-b2cc-9586fcdafd8e",
    "metadata": {},
    "outputs": [
     {
@@ -74,6 +77,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8c64278b-cba0-435d-a81e-01907dc94b82",
    "metadata": {},
    "source": [
     "### 2. Create a circuit and an observable\n",
@@ -84,6 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "92bd800f-1d25-47bd-8f6c-19eb47bfc817",
    "metadata": {},
    "outputs": [
     {
@@ -126,6 +131,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "accac29a-88fc-41fc-9799-05a13ea851b8",
    "metadata": {},
    "source": [
     "The circuit and observable need to be transformed to only use instructions supported by the QPU (referred to as *instruction set architecture (ISA)* circuits). We'll use the transpiler to do this."
@@ -134,6 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "4ad40fd6-f46b-4aa5-be9f-8ece16af08ae",
    "metadata": {},
    "outputs": [
     {
@@ -155,6 +162,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eaece075-3e4b-4967-a816-c61f120da91f",
    "metadata": {},
    "source": [
     "### 3. Initialize Qiskit Runtime Estimator\n",
@@ -165,6 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "d21ec1a4-44d9-45ab-9cce-eec9bcee46d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,6 +184,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c4fb0602-4d03-45b0-b1c9-86552765209b",
    "metadata": {},
    "source": [
     "### 4. Invoke the Estimator and get results\n",
@@ -185,6 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "97432adb-56f5-4b72-972f-77ac30f31b32",
    "metadata": {},
    "outputs": [
     {
@@ -211,6 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "8ed2324f-4e94-42c2-8515-7778879d252e",
    "metadata": {},
    "outputs": [
     {
@@ -232,6 +244,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eb70f63d-e449-4f0c-9ba4-e0ddab820ed6",
    "metadata": {},
    "source": [
     "<span id=\"start-sampler\"></span>\n",
@@ -247,6 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "c96c0905-4328-4383-83d3-b46debaddcfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,6 +274,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f4a189ff-798e-4655-a41f-31b75f643df4",
    "metadata": {},
    "source": [
     "### 2. Create a circuit\n",
@@ -270,6 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "9a709493-bf96-45d8-9aa0-d04a9a61bf7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,6 +300,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8cc0b51c-a9d4-4308-b4be-ffa78b5364b1",
    "metadata": {},
    "source": [
     "Use the transpiler to get an ISA circuit."
@@ -292,6 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "84d8fa59-fd9c-4a87-b859-1bc6dc6ecc12",
    "metadata": {},
    "outputs": [
     {
@@ -312,6 +330,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "977eb6da-9ea0-4b0a-9da2-6879595c83ac",
    "metadata": {},
    "source": [
     "### 3. Initialize the Qiskit Runtime Sampler\n",
@@ -322,6 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "2f4c0696-6da4-4a79-bfe5-141fa01bfb38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,6 +352,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7aafaf2a-cf1e-4a58-8178-cfc52ad54fc7",
    "metadata": {},
    "source": [
     "### 4. Invoke the Sampler and get results\n",
@@ -342,6 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "0d45665b-b6f4-46d4-a539-3628f145c0cb",
    "metadata": {},
    "outputs": [
     {
@@ -368,6 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "a928521f-5dc8-4657-b6ea-6222f08a6f85",
    "metadata": {},
    "outputs": [
     {
@@ -390,6 +413,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "81b8764a-4ec5-4c8c-8690-bcdc540862d3",
    "metadata": {},
    "source": [
     "<span id=\"backend\"></span>\n",
@@ -406,6 +430,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d207c7e0-2b47-4964-af86-cfce2f0b4ac8",
    "metadata": {},
    "source": [
     "### Example: BackendEstimator\n",
@@ -433,6 +458,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d85f35a1-1f27-4c8f-ab17-4b0f24d07a0b",
    "metadata": {},
    "source": [
     "### Similarities and differences between backend and Runtime primitives\n",
@@ -451,6 +477,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5dd510e3-d934-4a15-89ea-a0b3c276f03e",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -471,7 +498,7 @@
  "metadata": {
   "description": "How to use the Estimator and Sampler primitives in Qiskit Runtime.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -485,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3"
   },
   "title": "Get started with primitives"
  },
