--- a/docs/guides/local-testing-mode.ipynb
+++ b/docs/guides/local-testing-mode.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c08a245a-82c1-4c6f-b1e1-d0a27f093b7a",
    "metadata": {},
    "source": [
     "<span id=\"test-locally\"></span>\n",
@@ -10,6 +11,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "14778d9c-4e0e-4b84-8575-90e4efab25a2",
    "metadata": {
     "tags": [
      "version-info"
@@ -32,6 +34,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "435ec827-a348-4b70-b1ef-582849c0a76a",
    "metadata": {},
    "source": [
     "Local testing mode (available with `qiskit-ibm-runtime` 0.22.0 or later) can be used to help develop and test programs before fine-tuning them and sending them to real quantum hardware.  After using local testing mode to verify your program, all you need to change is the backend name to run it on a QPU.\n",
@@ -52,6 +55,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "366b1216-fb2f-4d06-afd8-fe374ab6ed9a",
    "metadata": {},
    "source": [
     "## Fake backends example"
@@ -60,6 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "efda5007-260a-49c0-ab6f-eac91fdbdf84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,6 +93,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b51e77c0-31c9-4dfa-950c-0a9ea9247aac",
    "metadata": {},
    "source": [
     "## AerSimulator examples\n",
@@ -98,6 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "63407a34-0c70-400a-bc34-f85ccd581c4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +131,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6a511de6-dc37-4ac4-87f8-bee90e3014a3",
    "metadata": {},
    "source": [
     "To simulate with noise, specify a QPU (quantum hardware) and submit it to Aer.  Aer builds a noise model based on the calibration data from that QPU, and instantiates an Aer backend with that model.  If you prefer, you can [build a noise model](./build-noise-models).\n",
@@ -134,6 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "0878eec8-9959-4e98-aff7-bf114352b838",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,6 +172,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2a2815a4-19f9-4ebd-8e53-4e29bea4a8db",
    "metadata": {},
    "source": [
     "<span id=\"clifford-sim\"></span>\n",
@@ -176,6 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "b9d0fdac-ba2e-4c4e-8c49-c924fb8b5c43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,6 +215,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ee461e4d-ee50-4430-9e83-c3b49cd7a1ef",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -221,7 +233,7 @@
  "metadata": {
   "description": "Use local testing mode to simulate quantum hardware in Qiskit Runtime",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -235,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3"
   },
   "title": "Qiskit Runtime local testing mode"
  },
