--- a/docs/guides/primitives-examples.ipynb
+++ b/docs/guides/primitives-examples.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1f4a2ec4-3595-4300-8f9e-092b0ef9b444",
    "metadata": {},
    "source": [
     "# Primitives examples\n",
@@ -35,6 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "24573866-7cf2-40e1-b61c-a2bdcecb759b",
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +80,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "63769604-ec9e-4ff3-823d-e60f4eb8a877",
    "metadata": {},
    "source": [
     "### Run multiple experiments in a single job\n",
@@ -88,6 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "bf4668bd-aaaf-4b23-af4b-4df767bd6d1a",
    "metadata": {},
    "outputs": [
     {
@@ -148,6 +152,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "60bf051a-40f8-47a9-b74d-38713bc15210",
    "metadata": {},
    "source": [
     "### Run parameterized circuits\n",
@@ -158,6 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "67dc98b8-499c-44d9-ada1-6abc9d6198c0",
    "metadata": {},
    "outputs": [
     {
@@ -262,6 +268,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "793f0ed1-5682-4aa3-a4a0-7baba71650f9",
    "metadata": {},
    "source": [
     "### Use sessions and advanced options\n",
@@ -278,6 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "d007b547-8546-4ca3-aee6-9a4e3a82598d",
    "metadata": {},
    "outputs": [
     {
@@ -348,6 +356,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "12aea3c7-37a1-4a6b-b944-587669aa6611",
    "metadata": {},
    "source": [
     "<span id=\"sampler-examples\"></span>\n",
@@ -363,6 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "a5a561b3-3819-4f9e-bb64-4c27267e0e96",
    "metadata": {
     "scrolled": true
    },
@@ -408,6 +418,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c9ea6d3c-b03f-49e2-a8de-d32e58396e02",
    "metadata": {},
    "source": [
     "### Run multiple experiments in a single job\n",
@@ -418,6 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "e4534da8-9fe3-402b-8afc-f4bd9fbed497",
    "metadata": {},
    "outputs": [
     {
@@ -465,6 +477,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e3ce4f13-b772-4ee6-ba9d-d98da633ab5c",
    "metadata": {},
    "source": [
     "### Run parameterized circuits\n",
@@ -475,6 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "c63c9cb6-0650-433c-b3d6-dcde06e465e4",
    "metadata": {},
    "outputs": [
     {
@@ -527,6 +541,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a8b00d2a-3c5d-4670-9774-d39cdb262552",
    "metadata": {},
    "source": [
     "### Use sessions and advanced options\n",
@@ -543,6 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "881fdac4-973b-4cef-a3da-c011d326ff54",
    "metadata": {
     "scrolled": true
    },
@@ -599,6 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "40fe2a06-edfc-41a8-9054-7f31ab93a00c",
    "metadata": {},
    "outputs": [
     {
@@ -619,6 +636,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "551e1894-a12a-4f6c-8347-020fdc9db74e",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -637,7 +655,7 @@
  "metadata": {
   "description": "Practical examples of using primitives in Qiskit Runtime.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -651,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3"
   },
   "title": "Primitives examples"
  },
