--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -724,7 +724,7 @@
  "metadata": {
   "description": "Apply automated error suppression using Fire Opal Performance Management by Q-CTRL",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -738,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3"
   },
   "title": "Performance Management - A Qiskit Function by Q-CTRL Fire Opal"
  },
