update monitor-job example

--- a/docs/guides/monitor-job.mdx
+++ b/docs/guides/monitor-job.mdx
@@ -53,7 +53,7 @@ from qiskit_ibm_runtime import QiskitRuntimeService
 
 # Initialize the account first.
 service = QiskitRuntimeService()
-
+# Use `limit` to retrieve a specific number of jobs. The default `limit` is 10.
 service.jobs(backend_name=my_backend)
 ```
 
