Update NoiseLearner example output

--- a/docs/guides/noise-learning.ipynb
+++ b/docs/guides/noise-learning.ipynb
@@ -164,8 +164,11 @@
     "    f\" an object of type:\\n {type(noise_model.data[0])}\\n\"\n",
     ")\n",
     "print(\n",
-    "    f\"And each of these `LayerError` objects possess the\"\n",
-    "    f\" following data: \\n{noise_model.data[0].error}\\n\"\n",
+    "    f\"And each of these `LayerError` objects possess\"\n",
+    "    f\" data on the generators for the error channel: \\n{noise_model.data[0].error.generators}\\n\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"Along with the error rates: \\n{noise_model.data[0].error.rates}\\n\"\n",
     ")"
    ]
   },
