--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -15,7 +15,7 @@ Keep up with the latest and greatest from Qiskit and IBM Quantum&reg;!
 
 For all product announcements, visit the [Announcements](https://docs.quantum.ibm.com/announcements/product-updates) page on IBM Quantum Platform Classic.
 
-Jump to [IBM Quantum Platform](#latest-platform) | [Qiskit SDK](latest-qiskit-sdk) | [Qiskit Runtime Client](#latest-qiskit-runtime) | [Qiskit Runtime Service](#latest-runtime-service) | [Qiskit Transpiler Service](#latest-qiskit-transpiler-service) | [Qiskit Functions](#latest-qiskit-functions) | [Documentation](#latest-docs)
+Jump to [IBM Quantum Platform](#latest-platform) | [Qiskit SDK](#latest-qiskit-sdk) | [Qiskit Runtime Client](#latest-qiskit-runtime) | [Qiskit Runtime Service](#latest-runtime-service) | [Qiskit Transpiler Service](#latest-qiskit-transpiler-service) | [Qiskit Functions](#latest-qiskit-functions) | [Documentation](#latest-docs)
 
 <span id="latest-platform"></span>
 ##  IBM Quantum Platform
