revert q-ctrl notebook following review

--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -173,14 +173,14 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from qiskit.circuit.library import iqp\n",
+    "from qiskit.circuit.library import IQP\n",
     "from qiskit.quantum_info import random_hermitian, SparsePauliOp\n",
     "\n",
     "n_qubits = 50\n",
     "\n",
     "# Generate a random circuit\n",
     "mat = np.real(random_hermitian(n_qubits, seed=1234))\n",
-    "circuit = iqp(mat)\n",
+    "circuit = IQP(mat)\n",
     "circuit.measure_all()\n",
     "\n",
     "# Define observables as a string\n",
