--- a/docs/guides/install-c-api.mdx
+++ b/docs/guides/install-c-api.mdx
@@ -1,14 +1,14 @@
 ---
-title: Installing Qiskit's C API
-description: How to install and use Qiskit's C API as standalone library
+title: Install the Qiskit C API
+description: How to install and use the Qiskit C API as standalone library
 ---
 
-# Installing Qiskit's C API
+# Install the Qiskit C API
 
-This guide describes how to install and use Qiskit's C API. To see how to extend your
-Qiskit Python workflow with C, check the guide on [Extending Python with Qiskit's C API](./c-extension-for-python).
+This guide describes how to install and use the Qiskit C API. To see how to extend your
+Qiskit Python workflow with C, read [Extend Python with the Qiskit C API](/guides/c-extension-for-python).
 
-As example program we consider building an observable with C:
+The following example builds an observable with C:
 ```c
 // file: example.c
 #include <stdio.h>
@@ -40,21 +40,20 @@ int main(int argc, char* argv[]) {
 }
 ```
 
-## Unix
+## UNIX
 
-In the following we provide build instructions for Unix systems.
+This section provides build instructions for UNIX systems.
 
 ### Requirements
 
-We require the following tools for the compilation:
-* A Rust compiler: see e.g. the [guide on installing Qiskit from source](https://github.com/Qiskit/qiskit/blob/main/CONTRIBUTING.md#installing-qiskit-from-source).
-* A C compiler: we'll use GCC on Linux and Clang on MacOS
-* [`cbindgen`](https://github.com/mozilla/cbindgen): a tool to crate the C header, which you can e.g. install via `cargo install cbindgen`.
-    Note that running the tool from the command line should be enabled, which might require exporting your `PATH` variable
-    to include `/path/to/.cargo/bin`.
-* Make: this is optional, but we recommend the installation to use automated install processes
+Compilation requires the following tools:
+* A Rust compiler: see for example the [guide on installing Qiskit from source](https://github.com/Qiskit/qiskit/blob/main/CONTRIBUTING.md#installing-qiskit-from-source)
+* A C compiler: for example, GCC on Linux and Clang on MacOS
+* [`cbindgen`](https://github.com/mozilla/cbindgen): a tool to crate the C header, which you can install with `cargo install cbindgen`
+    Note that running the tool from the command line should be enabled, which might require exporting your `PATH` variable to include `/path/to/.cargo/bin`
+* Make: this is optional but is recommended to use automated install processes
 
-You can check everything is installed via
+This code verifies that everything has been installed:
 ```bash
 rustc --version
 gcc --version
@@ -62,42 +61,42 @@ cbindgen --version
 make --version  # optional, but recommended
 ```
 
-### Building
+### Build
 
 To build the C header and library, you can run the following Make command[^1] in Qiskit root,
-[^1]: If you did not install Make, check the `Makefile` in Qiskit root for the required commands. (Or just install Make, it's not too late.)
+[^1]: If you did not install Make, check the `Makefile` in Qiskit root for the required commands - or simply install Make; it's not too late.)
 ```bash
 make c
 ```
 which will provide the compiled shared library in `dist/c/lib` and the `qiskit.h` header with
 all function declarations in `dist/c/include`. Note that the precise library name depends
-on the platform, e.g `libqiskit.so` on Unix and `libqiskit.dylib` on MacOS.
-(Note that this step currently emits a lot of warnings. This is fine, we're working on it.)
+on the platform; for example,`libqiskit.so` on UNIX and `libqiskit.dylib` on MacOS.
+(Note that this step currently emits a lot of warnings, which is expected, and is no cause for alarm. Future versions will remove the warnings.)
 
-We can then compile a C program using the Qiskit C header and library, by
+You can then compile a C program using the Qiskit C header and library:
 ```bash
 gcc example.c -o example.o -I /path/to/dist/c/include -L /path/to/dist/c/lib -lqiskit
 ```
 To ensure the library is found during execution, set the runtime library path to
-include `/path/to/dist/c/lib`. This depends on the platform, e.g. on Linux
+include `/path/to/dist/c/lib`. This depends on the platform. On Linux:
 ```bash
 export LD_LIBRARY_PATH=/path/to/dist/c/lib:$LD_LIBRARY_PATH
 ```
-or on MacOS
+On MacOS:
 ```bash
 export DYLD_LIBRARY_PATH=/path/to/dist/c/lib:$DYLD_LIBRARY_PATH
 ```
-Alternatively, we can set the runtime library path during compilation by adding
+Alternatively, you can set the runtime library path during compilation by adding
 ```
 -Wl,-rpath,/path/to/dist/c/lib
 ```
 to the compiler flags.
 
-Now we can execute the binary,
+Now you can execute the binary:
 ```bash
 ./example.o
 ```
-which, if using the example snippet shown above, should print
+which, if using the example snippet shown previously, should print
 ```
 num_qubits: 100
 num_terms: 1
@@ -107,43 +106,42 @@ observable: SparseObservable { num_qubits: 100, coeffs: [Complex { re: 2.0, im: 
 ## Windows (experimental)
 
 <Admonition type="caution">
-  Windows support is currently experimental. Instructions are work in progress.
+  Windows support is currently experimental. These instructions are a work in progress.
 </Admonition>
 
 ### Requirements
 
-We require the following tools for the compilation:
-* A Rust compiler: see e.g. the [guide on installing Qiskit from source](https://github.com/Qiskit/qiskit/blob/main/CONTRIBUTING.md#installing-qiskit-from-source).
-* A C compiler: we'll use MSVC and the native command prompt offering the ``cl`` command
-* A Python installation, both with access to ``python3.lib`` and ``python3.dll``.
-* [`cbindgen`](https://github.com/mozilla/cbindgen): a tool to crate the C header, which you can e.g. install via `cargo install cbindgen`.
-    Note that running the tool from the command line should be enabled, which might require exporting your `PATH` variable
-    to include `/path/to/.cargo/bin`.
+Compilation requires the following tools:
+* A Rust compiler: see for example the [guide on installing Qiskit from source](https://github.com/Qiskit/qiskit/blob/main/CONTRIBUTING.md#installing-qiskit-from-source)
+* A C compiler: for example, MSVC and the native command prompt offering the ``cl`` command
+* A Python installation, with access to both ``python3.lib`` and ``python3.dll``
+* [`cbindgen`](https://github.com/mozilla/cbindgen): a tool to crate the C header, which you can install with `cargo install cbindgen`
+    Note that running the tool from the command line should be enabled, which might require exporting your `PATH` variable to include `/path/to/.cargo/bin`
 
-### Building
+### Build
 
-First, we compile the `qiskit_cext` dynamic library, by running the following in Qiskit root
+First, compile the `qiskit_cext` dynamic library, by running the following in Qiskit root
 ```bash
 set PATH="\path\to\pythonlib\";%PATH%
 cargo rustc --release --crate-type cdylib -p qiskit-cext
 ```
-This will generate the ``.dll`` dynamic library, and associated ``.dll.lib`` file, in `target/release`.
-Next, we have to generate the header via
+This will generate the ``.dll`` dynamic library and associated ``.dll.lib`` file in `target/release`.
+Next, generate the header with
 ```bash
 cbindgen --crate qiskit-cext --output target\release\qiskit.h
 ```
-which will write the MSVC-compatible header in the same directory as the library.
+This will write the MSVC-compatible header in the same directory as the library.
 
-Now we can use `cl` to compile the C program. For simplicity we assume the file is
+Now you can use `cl` to compile the C program. For simplicity, here it is assumed the file is
 located in `target/release`.
 ```bash
 cl example.c qiskit_cext.dll.lib -I.
 ```
-If your source file has another location ensure to update the
+If your source file has another location,  be sure to update the
 local `PATH` variable to include the location of the dynamic library and the include path set
 via `-I`.
 
-Finally we can run the executable
+Finally, you can run the executable
 ```bash
 .\example.exe
 ```
@@ -154,5 +152,5 @@ num_terms: 1
 observable: SparseObservable { num_qubits: 100, coeffs: [Complex { re: 2.0, im: 0.0 }], bit_terms: [X, Y, Z], indices: [0, 1, 2], boundaries: [0, 3] }
 ```
 
-If running the executable causes missing library errors, you can try updating the local `PATH`
+If you get an error that reports libraries are missing, you can try updating the local `PATH`
 variable to include the necessary locations.
