--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -61,7 +61,7 @@ The `IBMBackend` attributes `max_shots` and `max_experiments`, as well as the pr
 
 #### New features
 
-qiskit-ibm-runtime is now compatible with Qiskit v2.0. This means that classes and methods removed in Qiskit v2.0 have also been removed or handled accordingly.  The `pulse` and `channel` related changes are highlighted below. See the [Pulse migration guide](/migration-guides/pulse-migration) for details.
+qiskit-ibm-runtime is now compatible with Qiskit v2.0. This means that classes and methods removed in Qiskit v2.0 have also been removed or handled accordingly.  The `pulse` and `channel` related changes are highlighted in the following list. See the [Pulse migration guide](/migration-guides/pulse-migration) for details.
 
    - `Channel` methods in `IBMBackend` have been removed.
    - The backend configuration class `PulseBackendConfiguration` has been removed, so all backends will now be returned as `QasmBackendConfiguration`.
