Bring in cloud platform updates

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -24,22 +24,25 @@ Jump to [Qiskit SDK](#latest-qiskit-sdk) | [Qiskit Runtime Client](#latest-qiski
 
 <CloudContent>
 <span id="latest-platform"></span>
-##  IBM Quantum Platform
+## IBM Quantum Platform
 
-### The next evolution of IBM Quantum Platform: How to prepare for the transition
+This section summarizes the recent enhancements and new features for IBM Quantum Platform.
 
-We are excited to announce a major evolution coming to IBM Quantum Platform, one that will bring a host of new features and provide Open Plan users with access to our state-of-the-art Heron processor.
+**27 March 2025**
 
-We are upgrading the Platform as part of our effort to deliver an enterprise-grade cloud experience that leverages new backend infrastructure for enhanced features, increased performance, and the latest data privacy and security measures. These changes lay a foundation to support the scaling of our services alongside the [IBM Quantum Roadmap,](https://www.ibm.com/quantum/technology#roadmap) and to enable the increasingly complex workloads that are required to achieve quantum advantage. 
+- Cost limits for Standard Plan
+  
+  Standard Plan users with sufficient access can now view and edit maximum cost limits for their instances. Refer to the [documentation](/guides/upgrade-from-open#set-the-maximum-cost-limit) for more information.
 
-#### 26 February 2025
+- Job management updates
 
-- Today, we are releasing an early access version of the upgraded experience, and invite you to [open an account and explore the new interface](https://quantum.cloud.ibm.com). We will continue to roll out updates over the coming months, with the end goal of creating an experience that looks and feels like the classic version of IBM Quantum Platform, but with greater functionality. We will eventually sunset IBM Quantum Platform classic, so stay tuned for updates.
+  Now only administrators can delete workloads created by other users in an account, and collaborators will only be able to delete their own workloads.
 
-- Please note: If your IBM Quantum Platform access falls under a plan administrator (Premium Plan, Dedicated Service, Startup Program, etc.), you will receive guided migration support through your administrator in the coming months. In the meantime, you are welcome to [create a free Open Plan account to explore the new platform.](https://quantum.cloud.ibm.com)
+- Updated authentication error messages
 
-- For full details on the early access release and upcoming improvements, [check out the blog](https://www.ibm.com/quantum/blog/iqp-upgrade).
+  We have improved error messaging for account and authentication processes to reduce issues with signup flow. We have also updated our [Support page](/support) with expanded recommendations for troubleshooting and resolving common errors.
 
+For full details on the early access release and upcoming improvements, [check out the blog](https://www.ibm.com/quantum/blog/iqp-upgrade).
 </CloudContent>
 <span id="latest-qiskit-sdk"></span>
 ## Qiskit SDK v1.3.0
